--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
 - name: gosigar
-  path: gopath/src/github.com/cloudfoundry/gosigar
+  path: /go/src/github.com/cloudfoundry/gosigar
 
 run:
-  path: gopath/src/github.com/cloudfoundry/gosigar/ci/tasks/test-unit.sh
+  path: /go/src/github.com/cloudfoundry/gosigar/ci/tasks/test-unit.sh
