Setup gosigar to run tests from its own gopath
[#152736258](https://www.pivotaltracker.com/story/show/152736258)

--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
 - name: gosigar
-  path: go/src/github.com/cloudfoundry/gosigar
+  path: gopath/src/github.com/cloudfoundry/gosigar
 
 run:
-  path: go/src/github.com/cloudfoundry/gosigar/ci/tasks/test-unit.sh
+  path: gopath/src/github.com/cloudfoundry/gosigar/ci/tasks/test-unit.sh
