Lock golang version to 1.x
[#156582099](https://www.pivotaltracker.com/story/show/156582099)

Co-authored-by: Danny Berger <dberger@pivotal.io>

--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
+    repository: golang:1
 
 inputs:
 - name: gosigar
