--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang:1
+    repository: golang
+    tag: 1
 
 inputs:
 - name: gosigar
