--- a/ci/tasks/test-unit.yml
+++ b/ci/tasks/test-unit.yml
@@ -4,8 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
-    tag: 1.17
+    repository: bosh/golang-release
 
 inputs:
 - name: gosigar
