--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -75,9 +75,10 @@ resources:
 - name: gosigar
   type: git
   source:
-    uri: git@github.com:cloudfoundry/gosigar.git
+    uri: https://github.com/cloudfoundry/gosigar.git
     branch: master
-    private_key: ((github_deploy_key_gosigar.private_key))
+    username: bosh-admin-bot
+    password: ((github_read_write_token))
 
 - name: version-semver
   type: semver
@@ -86,7 +87,7 @@ resources:
     initial_version: 1.3.4
     key: current-version
     bucket: gosigar-version
-    json_key: ((gcp_credentials_json))
+    json_key: ((broadcom_labs_gcp_credentials_json))
 
 - name: golang-release
   type: git
