Actions: normalize ginkgo commands

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/setup-go@v6
       with:
         go-version-file: go.mod
-    - run: go run github.com/onsi/ginkgo/v2/ginkgo run -r --race --keep-going ./...
+    - run: go run github.com/onsi/ginkgo/v2/ginkgo run -r -p --race --keep-going --output-interceptor-mode=none ./...
       if: ${{ ! startsWith(matrix.os, 'windows') }}
-    - run: go run github.com/onsi/ginkgo/v2/ginkgo run -r --race --keep-going --output-interceptor-mode=none --skip-package=psnotify -v ./...
+    - run: go run github.com/onsi/ginkgo/v2/ginkgo run -r -p --race --keep-going --output-interceptor-mode=none --skip-package=psnotify ./...
       if: ${{ startsWith(matrix.os, 'windows') }}
