--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -11,11 +11,13 @@ jobs:
 - name: test-unit
   public: true
   plan:
+    - get: golang-release-image
     - get: gosigar
       trigger: true
     - task: test-unit
       privileged: true
       file: gosigar/ci/tasks/test-unit.yml
+      image: golang-release-image
 
 - name: windows-test-unit
   serial: true
@@ -24,34 +26,38 @@ jobs:
     trigger: true
   - task: test-unit
     file: gosigar/ci/tasks/test-unit-windows.yml
-    tags:
-      - windows-nimbus
+    tags: [windows-nimbus]
 
 - name: bump-deps
   plan:
   - in_parallel:
+    - get: golang-release-image
     - get: gosigar
     - get: golang-release
     - get: weekly
       trigger: true
   - task: bump-deps
     file: golang-release/ci/tasks/shared/bump-deps.yml
+    image: golang-release-image
+    tags: [windows-nimbus]
     input_mapping:
       input_repo: gosigar
     output_mapping:
       output_repo: bumped-gosigar
+    params:
+      GOPROXY: https://((broadcom_artifactory_mirrors.username)):((broadcom_artifactory_mirrors.password))@((broadcom_artifactory_mirrors.golang)),off
   - in_parallel:
     - task: test-unit
       privileged: true
       file: gosigar/ci/tasks/test-unit.yml
+      image: golang-release-image
       input_mapping:
         gosigar: bumped-gosigar
     - task: test-unit-windows
       file: gosigar/ci/tasks/test-unit-windows.yml
       input_mapping:
         gosigar: bumped-gosigar
-      tags:
-        - windows-nimbus
+      tags: [windows-nimbus]
   - put: gosigar
     params:
       repository: bumped-gosigar
@@ -68,7 +74,10 @@ jobs:
     params:
       bump: patch
   - put: gosigar
-    params: {repository: gosigar, tag: version-semver/number, tag_prefix: v}
+    params:
+      repository: gosigar
+      tag: version-semver/number
+      tag_prefix: v
 
 
 resources:
@@ -93,6 +102,13 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/bosh-package-golang-release.git
+
+- name: golang-release-image
+  type: registry-image
+  source:
+    repository: bosh/golang-release
+    username: ((docker.username))
+    password: ((docker.password))
 
 - name: weekly
   type: time
