CI: update image ref
- remove redundant image_resource

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -107,9 +107,7 @@ resources:
 - name: golang-release-image
   type: registry-image
   source:
-    repository: bosh/golang-release
-    username: ((docker.username))
-    password: ((docker.password))
+    repository: ghcr.io/cloudfoundry/bosh/golang-release
 
 - name: weekly
   type: time
